<resources>
    <string name="app_name">Jose L. Orozco R. - Assignment 1 </string>
    <string name="title_activity_forget_password">ForgetPassword</string>

    <string name="emailcheck">montclair.edu</string>
    <string name="send_my_new_password">Send My New Password</string>
    <string name="back">Back</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="enter_your_msu_email">Enter your MSU email</string>
    <string name="touch_here_to_select_a_date">Touch here to select a date</string>
    <string name="enter_your_major">Enter your major</string>
    <string name="enter_your_name">Enter your name</string>
</resources>
