<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.RegistrationPage"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/new_background">


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:id="@+id/Reg_UserName"
            android:hint="@string/enter_a_username"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:id="@+id/Reg_SName"
            android:hint="@string/enter_your_name"/>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:id="@+id/Reg_SMajor"
            android:hint="@string/enter_your_major"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:id="@+id/Reg_Dob"
            android:hint="@string/touch_here_to_select_a_date"
            android:focusable="false"
            android:focusableInTouchMode="false"/>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:id="@+id/Reg_Email"
            android:hint="@string/enter_your_msu_email"
            android:inputType="textEmailAddress"
            />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:id="@+id/Reg_pass1"
            android:hint="@string/enter_your_password"
            android:maxLength="6" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:id="@+id/Reg_pass2"
            android:hint="@string/confirm_password"
            android:maxLength="6"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Reg"
            android:text="@string/register"
            android:backgroundTint="#0FFF"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:text="@string/back"
            android:backgroundTint="#0FFF" />
    </LinearLayout>
</ScrollView>
