<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.ForgetPassword"
    tools:showIn="@layout/activity_forget_password"
    android:gravity="center"
    android:background="@drawable/new_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/new_background"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:id="@+id/Forget_Password_Username"
                android:hint="@string/enter_a_username"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:id="@+id/Forget_Password_Email"
                android:hint="@string/enter_your_e_mail"
                android:inputType="textEmailAddress"
                />


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Forget_Password_Register"
                android:text="@string/send_my_new_password"
                android:backgroundTint="#0FFF"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_back1"
                android:text="@string/back"
                android:backgroundTint="#0FFF"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
